--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="header">
-    <div class="img"> <img src="./MadMan.png"> </div>
+    <div class="img"> <img src="MadMan.png"> </div>
     <div class="nav"> <a href="#quem-somos">quem somos</a> <a href="#unidades">nossas unidades</a> <a
         href="#servicos">cortes</a> <a href="#">agendar</a></div>
     <div class="botao"> <a href="https://twitter.com/Dave_Conner" class="btn btn-1"> <svg>
@@ -24,7 +24,7 @@
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
-          <img class="img1" src="c:\Users\Lucas\Downloads\interior-barbearia-moderna.webp" class="d-block w-100"
+          <img class="img1" src="interior-barbearia-moderna.webp" class="d-block w-100"
             alt="...">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
