--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <div class="header">
-    <div class="img"> <img src="MadMan.png"> </div>
+    <div class="img"> <img src="madman.png"> </div>
     <div class="nav"> <a href="#quem-somos">quem somos</a> <a href="#unidades">nossas unidades</a> <a
         href="#servicos">cortes</a> <a href="#">agendar</a></div>
     <div class="botao"> <a href="https://twitter.com/Dave_Conner" class="btn btn-1"> <svg>
@@ -74,7 +74,7 @@
       <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 
       <header>
-        <img src="MadMan.png" alt="MadMan">
+        <img src="madman.png" alt="MadMan">
         MadMan — Unidades (Região Sudeste)
       </header>
 
