--- a/index.html
+++ b/index.html
@@ -377,7 +377,9 @@
       </footer>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
-      <script src="script.js"></script>
+      <script>window.addEventListener('resize', function() {
+  map.invalidateSize();
+});</script>
       <!-- Leaflet JS -->
       <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
