--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 
   window.addUnit = addUnit;
 </script>
-<script><script>
+<script>
   // toggle simples para versão mobile (esconde/exibe .nav)
   (function(){
     // cria um botão toggle se não existir
@@ -498,7 +498,6 @@
       }
     });
   })();
-</script>
 </script>
 </body>
 
