--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 
       <header>
-        <img src="madman.png" alt="MadMan">
+        <img src="madman.png" alt="MadMan" class="img-madman">
         MadMan — Unidades (Região Sudeste)
       </header>
 
