--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <p>Corte completo com tesoura e máquina, lavagem com massagem e finalização profissional.</p>
                 <div style="display:flex; justify-content:space-between; align-items:center; margin-top:12px;">
                   <strong>R$ 60</strong>
-                  <a href="#agendamento>"<button type="button" class="btn btn-danger">Agendar</button></a>
+                  <a href="#agendamento"><button type="button" class="btn btn-danger">Agendar</button></a>
                 </div>
               </div>
 
@@ -109,7 +109,7 @@
                 <p>Manutenção rápida do corte, ideal para degradês e fades. Só máquina e acabamento leve.</p>
                 <div style="display:flex; justify-content:space-between; align-items:center; margin-top:12px;">
                   <strong>R$ 45</strong>
-                   <a href="#agendamento><button type="button" class="btn btn-danger">Agendar</button></a>
+                   <a href="#agendamento"><button type="button" class="btn btn-danger">Agendar</button></a>
                 </div>
               </div>
 
@@ -118,7 +118,7 @@
                 <p>Descoloração e coloração personalizada (mechas, luzes ou tom total).</p>
                 <div style="display:flex; justify-content:space-between; align-items:center; margin-top:12px;">
                   <strong>R$ 120</strong>
-                <a href="#agendamento>   <button type="button" class="btn btn-danger">Agendar</button></a>
+                <a href="#agendamento"><button type="button" class="btn btn-danger">Agendar</button></a>
                 </div>
               </div>
             </div>
@@ -133,7 +133,7 @@
                 <p>Ritual completo com navalha, toalha quente, espuma e pós-barba refrescante.</p>
                 <div style="display:flex; justify-content:space-between; align-items:center; margin-top:12px;">
                   <strong>R$ 45</strong>
-                 <a href="#agendamento>  <button type="button" class="btn btn-danger">Agendar</button></a>
+                 <a href="#agendamento"><button type="button" class="btn btn-danger">Agendar</button></a>
                 </div>
               </div>
 
@@ -142,7 +142,7 @@
                 <p>Desenho e contorno de barba, ideal pra manter o estilo afiado no dia a dia.</p>
                 <div style="display:flex; justify-content:space-between; align-items:center; margin-top:12px;">
                   <strong>R$ 35</strong>
-                   <a href="#agendamento><button type="button" class="btn btn-danger">Agendar</button></a>
+                   <a href="#agendamento"><button type="button" class="btn btn-danger">Agendar</button></a>
                 </div>
               </div>
 
@@ -151,7 +151,7 @@
                 <p>Barba ajustada com máquina e acabamento básico na navalha.</p>
                 <div style="display:flex; justify-content:space-between; align-items:center; margin-top:12px;">
                   <strong>R$ 40</strong>
-                  <a href="#agendamento> <button type="button" class="btn btn-danger">Agendar</button></a>
+                  <a href="#agendamento"> <button type="button" class="btn btn-danger">Agendar</button></a>
                 </div>
               </div>
             </div>
@@ -167,7 +167,7 @@
                 <p>Corte moderno, rápido e cuidadoso (até 12 anos).</p>
                 <div style="display:flex; justify-content:space-between; align-items:center; margin-top:12px;">
                   <strong>R$ 40</strong>
-                  <a href="#agendamento> <button type="button" class="btn btn-danger">Agendar</button></a>
+                  <a href="#agendamento"> <button type="button" class="btn btn-danger">Agendar</button></a>
                 </div>
               </div>
 
@@ -176,7 +176,7 @@
                 <p>Degradê suave e estiloso pra molecada.</p>
                 <div style="display:flex; justify-content:space-between; align-items:center; margin-top:12px;">
                   <strong>R$ 45</strong>
-                  <a href="#agendamento> <button type="button" class="btn btn-danger">Agendar</button></a>
+                  <a href="#agendamento"> <button type="button" class="btn btn-danger">Agendar</button></a>
                 </div>
               </div>
 
@@ -185,7 +185,7 @@
                 <p>Corte adulto + corte infantil juntos (desconto especial).</p>
                 <div style="display:flex; justify-content:space-between; align-items:center; margin-top:12px;">
                   <strong>R$ 90</strong>
-                  <a href="#agendamento> <button type="button" class="btn btn-danger">Agendar</button></a>
+                  <a href="#agendamento"> <button type="button" class="btn btn-danger">Agendar</button></a>
                 </div>
               </div>
             </div>
@@ -201,7 +201,7 @@
                 <p>Corte "Full Throttle" + Barba à Moda Antiga (ou Barba & Máquina).</p>
                 <div style="display:flex; justify-content:space-between; align-items:center; margin-top:12px;">
                   <strong>R$ 95</strong>
-                  <a href="#agendamento> <button type="button" class="btn btn-danger">Agendar</button></a>
+                  <a href="#agendamento"> <button type="button" class="btn btn-danger">Agendar</button></a>
                 </div>
               </div>
 
@@ -210,7 +210,7 @@
                 <p>Corte + Barba + Design de sobrancelhas. O pacote completo pra sair no estilo.</p>
                 <div style="display:flex; justify-content:space-between; align-items:center; margin-top:12px;">
                   <strong>R$ 110</strong>
-                 <a href="#agendamento>  <button type="button" class="btn btn-danger">Agendar</button></a>
+                 <a href="#agendamento">  <button type="button" class="btn btn-danger">Agendar</button></a>
                 </div>
               </div>
             </div>
@@ -226,7 +226,7 @@
                 <p>Tratamento profundo para restaurar brilho e força dos fios.</p>
                 <div style="display:flex; justify-content:space-between; align-items:center; margin-top:12px;">
                   <strong>R$ 35</strong>
-                  <a href="#agendamento> <button type="button" class="btn btn-danger">Agendar</button></a>
+                  <a href="#agendamento"> <button type="button" class="btn btn-danger">Agendar</button></a>
                 </div>
               </div>
 
@@ -235,7 +235,7 @@
                 <p>Design e limpeza de sobrancelhas com pinça ou navalha.</p>
                 <div style="display:flex; justify-content:space-between; align-items:center; margin-top:12px;">
                   <strong>R$ 25</strong>
-                  <button type="button" class="btn btn-danger">Agendar</button></a>
+                  <a href="#agendamento"><button type="button" class="btn btn-danger">Agendar</button></a>
                 </div>
               </div>
 
@@ -450,7 +450,7 @@ const map = L.map('map', {
         <div class="unit-name">${u.name}</div>
         <div class="unit-meta">${u.addr}</div>
         <div class="unit-meta">${u.city}</div>
-        <a href="servicos.html" class="unit-link">Ver serviços</a>
+        <a href="#servicos" class="unit-link">Ver serviços</a>
         &nbsp;
         <a href="#agendamento" class="unit-link" style="background:var(--madman-red); color:#fff;">Agendar</a>
       </div>
@@ -468,7 +468,7 @@ const map = L.map('map', {
     const newUnit = { id: Date.now(), name, addr, city, lat, lng };
     units.push(newUnit);
     const m = L.marker([lat, lng], { icon: madIcon }).addTo(map);
-    m.bindPopup(`<div class="unit-name">${name}</div><div class="unit-meta">${addr}</div><a href="agendamento.html" class="unit-link">Agendar</a>`);
+    m.bindPopup(`<div class="unit-name">${name}</div><div class="unit-meta">${addr}</div><a href="#agendamento" class="unit-link">Agendar</a>`);
   }
 
   window.addUnit = addUnit;
